--- a/cpd-portal/src/app/pages/login/login.component.html
+++ b/cpd-portal/src/app/pages/login/login.component.html
@@ -2,9 +2,7 @@
   <div class="login-card">
     <div class="card-header">
       <div class="logo-container">
-        <!-- Placeholder for The MOT Club Logo lookalike -->
-        <div class="logo-text">THE <span class="highlight">MOT</span> CLUB</div>
-        <div class="app-name">SITECHECK</div>
+        <div class="app-name">E-LEARNING</div>
       </div>
     </div>
 
@@ -13,7 +11,6 @@
         <div class="form-field">
           <label for="email">Email Address</label>
           <div class="input-wrapper">
-            <span class="icon">@</span>
             <input 
               id="email" 
               type="email" 
@@ -27,7 +24,6 @@
         <div class="form-field">
           <label for="password">Password</label>
           <div class="input-wrapper">
-            <span class="icon">🔒</span>
             <input 
               id="password" 
               type="password" 
@@ -52,10 +48,6 @@
           {{ errorMessage }}
         </div>
       </form>
-    </div>
-    
-    <div class="card-footer">
-      <p>Not a member? <a href="#" class="join-link">Join The Club</a></p>
     </div>
   </div>
 </div>
