--- a/cpd-portal/src/app/pages/login/login.component.css
+++ b/cpd-portal/src/app/pages/login/login.component.css
@@ -90,9 +90,9 @@
 
 .input-wrapper input:focus {
   outline: none;
-  border-color: #e31e24;
+  border-color: var(--primary-color);
   background-color: #fff;
-  box-shadow: 0 0 0 3px rgba(227, 30, 36, 0.1);
+  box-shadow: 0 0 0 3px rgba(104, 174, 221, 0.1);
 }
 
 .form-actions {
@@ -102,7 +102,7 @@
 .btn-login {
   width: 100%;
   padding: 14px;
-  background-color: #e31e24; /* MOT Red */
+  background-color: var(--primary-color);
   color: white;
   border: none;
   border-radius: 4px;
@@ -117,7 +117,7 @@
 }
 
 .btn-login:disabled {
-  background-color: #eea2a4;
+  background-color: #b4d4eb;
   cursor: not-allowed;
 }
 
